--- a/uploader/Dockerfile
+++ b/uploader/Dockerfile
@@ -3,15 +3,12 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# Install dependencies
+# Copy everything needed for install
 COPY pyproject.toml .
-RUN pip install --no-cache-dir .
-
-# Copy source
 COPY src/ src/
 
 # Install the package
-RUN pip install --no-cache-dir -e .
+RUN pip install --no-cache-dir .
 
 # Create non-root user
 RUN useradd -m -u 1000 uploader
