--- a/services/polymarket_trader/pyproject.toml
+++ b/services/polymarket_trader/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "websockets>=12.0",
     "orjson>=3.9.0",
     "aiohttp>=3.9.0",
+    "py-clob-client>=0.18.0",
 ]
 
 [project.scripts]
