--- a/services/polymarket_trader/requirements.txt
+++ b/services/polymarket_trader/requirements.txt
@@ -2,3 +2,6 @@
 websockets>=12.0
 orjson>=3.9.0
 aiohttp>=3.9.0
+
+# Polymarket order execution (REQUIRED for order signing)
+py-clob-client>=0.18.0
